[project]
name = "llm-security"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepeval>=4.1.1",
    "ipykernel>=7.3.0",
    "langchain-core>=1.4.9",
    "langchain-groq>=1.1.3",
    "langchain-nvidia-ai-endpoints>=1.4.3",
    "langchain-openai>=1.3.5",
    "langfuse>=4.14.0",
    "langsmith>=0.10.5",
    "logfire[fastapi,requests]>=4.37.0",
    "loguru>=0.7.3",
    "nemoguardrails>=0.23.0",
    "openai>=2.46.0",
    "pandas>=2.3.3",
    "portkey-ai>=2.3.2",
    "python-dotenv>=1.2.2",
    "ragas>=0.3.1",
]
